--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -27,7 +27,7 @@ main {
   padding: 10px 15px;
   margin: 20px 0px;
   text-align: center;
-  white-space: nowrap;
+  white-space: normal;
 }
 h2 {
   font-size: 25px;
