--- a/socialtech-kadai_012/style.css
+++ b/socialtech-kadai_012/style.css
@@ -319,6 +319,45 @@ PC用のスタイル
         margin: 10px 0 0 0;
     }
 
+    /* CASES */
+    #cases {
+        margin: 40px 0 40px 0;
+        width: 100%;
+    }
+
+    ul {
+        display: flex;
+        list-style-type: none;
+    }
+
+    li {
+        width: 33%;
+        margin: 20px;
+    }
+
+    .case-card {
+        background-color: #ffffff;
+        min-height: 400px;
+        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.05);
+    }
+
+    .case-img {
+        width: 100%;
+    }
+
+    .case-info {
+        padding: 10px 20px 10px 20px;
+    }
+
+    .case-name {
+        color: #2710d5;
+        font-size: 19px;
+    }
+
+    .case-content {
+        font-size: 14px;
+    }
+
     /* 会社概要 */
     #company {
         margin: 80px auto 80px auto;
